--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/vkKlaus/node_js#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "pg": "^8.4.1",
     "sqlite3": "^5.0.0"
   }
